--- a/billing/locale/ru/LC_MESSAGES/django.po
+++ b/billing/locale/ru/LC_MESSAGES/django.po
@@ -9,16 +9,14 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-02-13 09:16+0000\n"
-"PO-Revision-Date: 2018-02-13 09:16+0000\n"
+"PO-Revision-Date: 2018-02-13 12:46+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
-"%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
 "X-Translated-Using: django-rosetta 0.7.13\n"
 
 #: billing/lib/mb.py:69 billing/lib/mb.py:100
@@ -59,28 +57,19 @@ msgid ""
 "\n"
 "    <p>Hello!</p>\n"
 "\n"
-"    <p>Order #%(id)s from %(created)s was generated to pay for 'Maxibooking'."
-"</p>\n"
+"    <p>Order #%(id)s from %(created)s was generated to pay for 'Maxibooking'.</p>\n"
 "    <p>It must be paid before %(expired)s</p>\n"
-"    <p>You can view the order and make a payment in the personal cabinet of "
-"the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
-"    <p>If you have any questions, you can find on them an answer in the "
-"knowledge base of the 'Maxibooking' system at the address: https://support."
-"maxi-booking.com or by sending an email to the support service: support@maxi-"
-"booking.com.</p>\n"
+"    <p>You can view the order and make a payment in the personal cabinet of the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
+"    <p>If you have any questions, you can find on them an answer in the knowledge base of the 'Maxibooking' system at the address: https://support.maxi-booking.com or by sending an email to the support service: support@maxi-booking.com.</p>\n"
 "\n"
 msgstr ""
 "\n"
 "<p>Здравствуйте!</p>\n"
 "\n"
-"<p>Сформирован заказ №%(id)s от %(created)s для оплаты использования "
-"программы «Максибукинг».</p>\n"
+"<p>Сформирован заказ №%(id)s от %(created)s для оплаты использования программы «Максибукинг».</p>\n"
 "<p>Его необходимо оплатить до %(expired)s</p>\n"
-"<p>Просмотреть заказ и произвести оплату Вы можете в личном кабинете системы "
-"«Максибукинг» перейдя по ссылке: %(url)s </p>\n"
-"<p>Если у Вас возникли вопросы, Вы можете найти на них отвтет в базе знаний "
-"системы «Максибукинг» по адресу: https://support.maxi-booking.com или "
-"отправив запрос на email службы поддержки: support@maxi-booking.ru</p>\n"
+"<p>Просмотреть заказ и произвести оплату Вы можете в личном кабинете системы «Максибукинг» перейдя по ссылке: %(url)s </p>\n"
+"<p>Если у Вас возникли вопросы, Вы можете найти на них отвтет в базе знаний системы «Максибукинг» по адресу: https://maxi-booking.zendesk.com/hc/ru или отправив запрос на email службы поддержки: support@maxi-booking.ru</p>\n"
 
 #: billing/templates/emails/order_client_disabled.html:6 finances/tasks.py:61
 msgid "Your account is disabled"
@@ -91,18 +80,14 @@ msgstr "Ваш аккаунт заблокирован"
 msgid ""
 "\n"
 "        <p>Hello!</p>\n"
-"        <p>Due to payment arrears, your account in the 'Maxibooking' system "
-"is blocked.</p>\n"
-"        <p>To unlock your account, go to your personal account and pay for "
-"the orders %(url)s</p> \n"
+"        <p>Due to payment arrears, your account in the 'Maxibooking' system is blocked.</p>\n"
+"        <p>To unlock your account, go to your personal account and pay for the orders %(url)s</p> \n"
 "    "
 msgstr ""
 "\n"
 "<p>Здравствуйте!</p>\n"
-"<p>Из-за задолженности по оплате Ваш аккаунт в системе «Максибукинг» "
-"заблокирован.</p>\n"
-"<p>Для разблокировки аккаунта перейдите в свой личный кабинет и оплатите "
-"заказы  %(url)s</p> "
+"<p>Из-за задолженности по оплате Ваш аккаунт в системе «Максибукинг» заблокирован.</p>\n"
+"<p>Для разблокировки аккаунта перейдите в свой личный кабинет и оплатите заказы  %(url)s</p> "
 
 #: billing/templates/emails/order_paid.html:6 finances/signals.py:44
 msgid "Your payment was successful"
@@ -119,8 +104,7 @@ msgstr ""
 "\n"
 "<p>Здравствуйте!</p>\n"
 "<p>Спасибо за оплату!</p>\n"
-"<p>Заказ №%(id)s \tот %(created)s за использование программы «Максибукинг» "
-"оплачен.</p>\n"
+"<p>Заказ №%(id)s \tот %(created)s за использование программы «Максибукинг» оплачен.</p>\n"
 
 #: billing/templates/emails/order_payment_notification.html:6
 #: finances/tasks.py:40
@@ -133,24 +117,18 @@ msgid ""
 "\n"
 "    <p>Hello!</p>\n"
 "\n"
-"    <p>You need to pay order #%(id)s from %(created)s for using the "
-"\"Maxbooking\".</p>\n"
+"    <p>You need to pay order #%(id)s from %(created)s for using the \"Maxbooking\".</p>\n"
 "    <p>Payment must be made before %(expired)s</p>\n"
-"    <p>You can view the order and make a payment in the personal cabinet of "
-"the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
+"    <p>You can view the order and make a payment in the personal cabinet of the  'Maxibooking' system by clicking on the link: %(url)s </p>\n"
 "\n"
 msgstr ""
 "\n"
 "<p>Здравствуйте!</p>\n"
 "\n"
-"<p>Вам необходимо оплатить заказ № %(id)s от %(created)s за использование "
-"программы «Максибукинг».</p>\n"
+"<p>Вам необходимо оплатить заказ № %(id)s от %(created)s за использование программы «Максибукинг».</p>\n"
 "<p>Его необходимо оплатить до %(expired)s</p>\n"
-"<p>Просмотреть заказ и произвести оплату Вы можете в личном кабинете системы "
-"«Максибукинг» перейдя по ссылке: %(url)s </p>\n"
-"<p>Если у Вас возникли вопросы, Вы можете найти на них отвтет в базе знаний "
-"системы «Максибукинг» по адресу: https://support.maxi-booking.ru или "
-"отправив запрос на email службы поддержки: support@maxi-booking.ru</p>\n"
+"<p>Просмотреть заказ и произвести оплату Вы можете в личном кабинете системы «Максибукинг» перейдя по ссылке: %(url)s </p>\n"
+"<p>Если у Вас возникли вопросы, Вы можете найти на них отвтет в базе знаний системы «Максибукинг» по адресу:https://maxi-booking.zendesk.com/hc/ru или отправив запрос на email службы поддержки: support@maxi-booking.ru</p>\n"
 
 #: billing/templates/emails/registration.html:6 clients/views.py:230
 msgid "Registation successefull"
@@ -169,8 +147,7 @@ msgid ""
 "        <li>password: %(password)s</li>\n"
 "    </ul>\n"
 "\n"
-"    <p>Knowledge base for work in the program: https://support.maxi-booking."
-"com</p>\n"
+"    <p>Knowledge base for work in the program: https://support.maxi-booking.com</p>\n"
 "    <p>You can get support by contacting: support@maxi-booking.com</p>\n"
 "\n"
 msgstr ""
@@ -184,23 +161,20 @@ msgstr ""
 "<li>пароль: %(password)s</li>\n"
 "</ul>\n"
 "\n"
-"<p>База знаний по работе в программе:  https://support.maxi-booking.ru</p>\n"
-"<p>Поддержку можно получить обратившись по email: support@maxi-booking.ru</"
-"p>\n"
+"<p>База знаний по работе в программе:  https://maxi-booking.zendesk.com/hc/ru</p>\n"
+"<p>Поддержку можно получить обратившись по email: support@maxi-booking.ru</p>\n"
 
 #: billing/templates/emails/registration_fail.html:10
 msgid ""
 "\n"
 "    <p>Hello!</p>\n"
 "    <p>When installing the program \"Maxibooking\" an error occurred.</p>\n"
-"    <p>To resolve this error, please contact support at: support@maxi-"
-"booking.com</p> \n"
+"    <p>To resolve this error, please contact support at: support@maxi-booking.com</p> \n"
 msgstr ""
 "\n"
 "<p>Здравствуйте!</p>\n"
 "<p>При установке программы «Максибукинг» произошла ошибка.</p>\n"
-"<p>Для устранения ошибки обратитесь, пожалуйста, в службу поддержки по "
-"адресу: support@maxi-booking.ru</p> \n"
+"<p>Для устранения ошибки обратитесь, пожалуйста, в службу поддержки по адресу: support@maxi-booking.ru</p> \n"
 
 #: billing/templates/emails/sign.html:2
 msgid ""
@@ -216,7 +190,7 @@ msgstr ""
 "        Служба технической поддержки «Максибукинг»</p>\n"
 "\n"
 "    <p>E-mail: support@maxi-booking.ru<br>\n"
-"       База знаний: https://support.maxi-booking.ru</p>\n"
+"       База знаний: https://maxi-booking.zendesk.com/hc/ru</p>\n"
 
 #: clients/admin.py:165
 msgid "Installation successfully started."
