--- a/billing/locale/en/LC_MESSAGES/django.po
+++ b/billing/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-06-04 10:26+0000\n"
+"POT-Creation-Date: 2018-06-04 12:55+0000\n"
 "PO-Revision-Date: 2018-06-04 10:26+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -725,7 +725,7 @@ msgid "bill"
 msgstr ""
 
 #: finances/systems/models.py:172
-msgid "bill description"
+msgid "Create a bill for non-cash transfer through the Bank"
 msgstr ""
 
 #: finances/systems/models.py:210
@@ -733,7 +733,7 @@ msgid "rbk"
 msgstr ""
 
 #: finances/systems/models.py:211
-msgid "rbk description"
+msgid "Payment by card through the \"RBK Money\" system"
 msgstr ""
 
 #: finances/systems/models.py:311
