--- a/billing/locale/ru/LC_MESSAGES/django.po
+++ b/billing/locale/ru/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-06-04 12:55+0000\n"
-"PO-Revision-Date: 2018-06-04 12:58+0000\n"
+"PO-Revision-Date: 2018-06-04 13:14+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -760,7 +760,7 @@ msgstr ""
 
 #: finances/systems/models.py:171
 msgid "bill"
-msgstr ""
+msgstr "счет"
 
 #: finances/systems/models.py:172
 msgid "Create a bill for non-cash transfer through the Bank"
