change the client_disabled email

--- a/billing/locale/en/LC_MESSAGES/django.po
+++ b/billing/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-07 08:26+0000\n"
+"POT-Creation-Date: 2018-08-07 09:23+0000\n"
 "PO-Revision-Date: 2018-06-04 10:26+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -147,11 +147,11 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"        <p>Hello!</p>\n"
+"        <p>Hello, %(name)s!</p>\n"
 "        <p>Due to payment arrears, your account in the 'Maxibooking' system "
 "is blocked.</p>\n"
 "        <p>To unlock your account, go to your personal account and pay for "
-"the orders %(url)s</p> \n"
+"the order #%(order.id)s from %(created)s %(url)s</p> \n"
 "    "
 msgstr ""
 
