--- a/billing/locale/ru/LC_MESSAGES/django.po
+++ b/billing/locale/ru/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-07 08:26+0000\n"
-"PO-Revision-Date: 2018-08-07 08:38+0000\n"
+"POT-Creation-Date: 2018-08-07 09:23+0000\n"
+"PO-Revision-Date: 2018-08-07 09:24+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -150,15 +150,17 @@ msgstr "Ваш аккаунт заблокирован"
 #, python-format
 msgid ""
 "\n"
-"        <p>Hello!</p>\n"
+"        <p>Hello, %(name)s!</p>\n"
 "        <p>Due to payment arrears, your account in the 'Maxibooking' system is blocked.</p>\n"
-"        <p>To unlock your account, go to your personal account and pay for the orders %(url)s</p> \n"
+"        <p>To unlock your account, go to your personal account and pay for the order #%(order.id)s from %(created)s %(url)s</p> \n"
 "    "
 msgstr ""
 "\n"
-"<p>Здравствуйте!</p>\n"
-"<p>Из-за задолженности по оплате Ваш аккаунт в системе «Максибукинг» заблокирован.</p>\n"
-"<p>Для разблокировки аккаунта перейдите в свой личный кабинет и оплатите заказы  %(url)s</p> "
+"<p>Здравствуйте %(name)s,</p>\n"
+"<p>Случилось страшное. Из-за задолженности по оплате Ваш аккаунт в системе «Максибукинг» заблокирован.</p>\n"
+"<p>Скорее разблокируйте его, что бы не упустить ни одной брони.</p>\n"
+"<p>Для разблокировки аккаунта Вам необходимо оплатить заказ №%(order.id)s от %(created)s в Вашем личном кабинете перейдя по ссылке: %(url)s</p>\n"
+"<p>Есть функции которые вы хотите попробовать но еще не успели настроить? Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>"
 
 #: billing/templates/emails/order_paid.html:6 finances/signals.py:44
 msgid "Your payment was successful"
