the emails workflow process

--- a/billing/locale/ru/LC_MESSAGES/django.po
+++ b/billing/locale/ru/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-08-07 09:23+0000\n"
-"PO-Revision-Date: 2018-08-07 09:24+0000\n"
+"PO-Revision-Date: 2018-08-07 10:19+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -120,7 +120,7 @@ msgstr ""
 
 #: billing/templates/emails/new_order.html:6
 msgid "New order #"
-msgstr "Новый заказ №"
+msgstr "Новый счет №"
 
 #: billing/templates/emails/new_order.html:10
 #, python-format
@@ -137,9 +137,9 @@ msgstr ""
 "\n"
 "<p>Здравствуйте!</p>\n"
 "\n"
-"<p>Сформирован заказ №%(id)s от %(created)s для оплаты использования программы «Максибукинг».</p>\n"
+"<p>Сформирован счет №%(id)s от %(created)s для оплаты использования программы «Максибукинг».</p>\n"
 "<p>Его необходимо оплатить до %(expired)s</p>\n"
-"<p>Просмотреть заказ и произвести оплату Вы можете в личном кабинете системы «Максибукинг» перейдя по ссылке: %(url)s </p>\n"
+"<p>Просмотреть счет и произвести оплату Вы можете в личном кабинете системы «Максибукинг» перейдя по ссылке: %(url)s </p>\n"
 "<p>Если у Вас возникли вопросы, Вы можете найти на них отвтет в базе знаний системы «Максибукинг» по адресу: https://maxi-booking.zendesk.com/hc/ru или отправив запрос на email службы поддержки: support@maxi-booking.ru</p>\n"
 
 #: billing/templates/emails/order_client_disabled.html:6 finances/tasks.py:61
@@ -159,7 +159,7 @@ msgstr ""
 "<p>Здравствуйте %(name)s,</p>\n"
 "<p>Случилось страшное. Из-за задолженности по оплате Ваш аккаунт в системе «Максибукинг» заблокирован.</p>\n"
 "<p>Скорее разблокируйте его, что бы не упустить ни одной брони.</p>\n"
-"<p>Для разблокировки аккаунта Вам необходимо оплатить заказ №%(order.id)s от %(created)s в Вашем личном кабинете перейдя по ссылке: %(url)s</p>\n"
+"<p>Для разблокировки аккаунта Вам необходимо оплатить счет №%(order.id)s от %(created)s в Вашем личном кабинете перейдя по ссылке: %(url)s</p>\n"
 "<p>Есть функции которые вы хотите попробовать но еще не успели настроить? Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>"
 
 #: billing/templates/emails/order_paid.html:6 finances/signals.py:44
@@ -176,14 +176,14 @@ msgid ""
 msgstr ""
 "\n"
 "<p>Здравствуйте %(name)s,</p>\n"
-"<p>Ваша оплата заказа №%(id)s от %(created)s прошла успешно.</p>\n"
+"<p>Ваша оплата счета №%(id)s от %(created)s прошла успешно.</p>\n"
 "<p>Мы рады видеть Вас среди наших клиентов!</p>\n"
 "<p>Есть функции которые вы хотите попробовать но еще не успели настроить? Напишите нам. Мы счастливы только если с нами Вы продаете больше!</p>\n"
 
 #: billing/templates/emails/order_payment_notification.html:6
 #: finances/tasks.py:40
 msgid "Order will expire soon"
-msgstr "Необходимо оплатить заказ"
+msgstr "Необходимо оплатить счет"
 
 #: billing/templates/emails/order_payment_notification.html:10
 #, python-format
@@ -199,9 +199,9 @@ msgstr ""
 "\n"
 "<p>Здравствуйте!</p>\n"
 "\n"
-"<p>Вам необходимо оплатить заказ № %(id)s от %(created)s за использование программы «Максибукинг».</p>\n"
+"<p>Вам необходимо оплатить счет № %(id)s от %(created)s за использование программы «Максибукинг».</p>\n"
 "<p>Его необходимо оплатить до %(expired)s</p>\n"
-"<p>Просмотреть заказ и произвести оплату Вы можете в личном кабинете системы «Максибукинг» перейдя по ссылке: %(url)s </p>\n"
+"<p>Просмотреть счет и произвести оплату Вы можете в личном кабинете системы «Максибукинг» перейдя по ссылке: %(url)s </p>\n"
 "<p>Если у Вас возникли вопросы, Вы можете найти на них отвтет в базе знаний системы «Максибукинг» по адресу:https://maxi-booking.zendesk.com/hc/ru или отправив запрос на email службы поддержки: support@maxi-booking.ru</p>\n"
 
 #: billing/templates/emails/registration.html:6
