--- a/billing/locale/en/LC_MESSAGES/django.po
+++ b/billing/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-08-08 10:44+0000\n"
+"POT-Creation-Date: 2018-08-08 13:05+0000\n"
 "PO-Revision-Date: 2018-06-04 10:26+0000\n"
 "Last-Translator: b'  <m@webmalc.pw>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -125,21 +125,23 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"    <p>Hello!</p>\n"
+"    <p>Hello, %(name)s!</p>\n"
 "\n"
-"    <p>Order #%(id)s from %(created)s was generated to pay for 'Maxibooking'."
-"</p>\n"
-"    <p>It must be paid before %(expired)s</p>\n"
-"    <p>You can view the order and make a payment in the personal cabinet of "
-"the 'Maxibooking' system by clicking on the link: %(url)s </p>\n"
-"    <p>If you have any questions, you can find on them an answer in the "
-"knowledge base of the 'Maxibooking' system at the address: https://support."
-"maxi-booking.com or by sending an email to the support service: support@maxi-"
-"booking.com.</p>\n"
+"    %(greetings_new)s\n"
+"\n"
+"    <p>You still have %(days)s more days of free use! To continue using "
+"Maxibooking after %(expired)s we have created for You the order #%(id)s "
+"dated %(created)s from the calculation of the number of Your room and the "
+"chosen period. It must be paid before %(expired)s.</p>\n"
+"    <p>View the order, change the period and number of rooms, and make "
+"payment you can in Your personal account by clicking on the link: %(url)s</"
+"p>\n"
+"    <p>Do you have features you want to try but haven't set up yet? Write to "
+"us. We are happy only if with us you sell more!</p>\n"
 "\n"
 msgstr ""
 
-#: billing/templates/emails/order_client_disabled.html:6 finances/tasks.py:73
+#: billing/templates/emails/order_client_disabled.html:6 finances/tasks.py:87
 msgid "Your account is disabled"
 msgstr ""
 
@@ -169,7 +171,7 @@ msgid ""
 msgstr ""
 
 #: billing/templates/emails/order_payment_notification.html:6
-#: finances/tasks.py:48
+#: finances/tasks.py:62
 msgid "Order will expire soon"
 msgstr ""
 
@@ -226,9 +228,12 @@ msgid ""
 "\n"
 "    <p>Yours faithfully,<br>\n"
 "        Technical support 'Maxibooking'</p>\n"
-"\n"
-"    <p>E-mail: support@maxi-booking.com<br>\n"
-"       Knowledge base: https://support.maxi-booking.com</p>\n"
+"    <p>\n"
+"        E-mail: <a href=\"mailto:support@maxi-booking.com\">support@maxi-"
+"booking.com</a><br>\n"
+"        Knowledge base: <a href=\"https://support.maxi-booking.com\">https://"
+"support.maxi-booking.com</a>\n"
+"    </p>\n"
 msgstr ""
 
 #: billing/templates/tabbed_admin/change_form.html:15
@@ -787,12 +792,12 @@ msgstr ""
 msgid "braintree description"
 msgstr ""
 
-#: finances/tasks.py:23
-msgid "New order created"
+#: finances/tasks.py:29 finances/tasks.py:59
+msgid "We are glad to see you among our clients!"
 msgstr ""
 
-#: finances/tasks.py:45
-msgid "We are glad to see you among our clients!"
+#: finances/tasks.py:31
+msgid "New order created"
 msgstr ""
 
 #: finances/templates/finances/bill.html:114
